[gd_scene load_steps=51 format=3 uid="uid://dq6hmfhh5r1oe"]

[ext_resource type="Script" path="res://Scripts/GenerateRoom.gd" id="1_je4ns"]
[ext_resource type="Script" path="res://Scripts/tourneletruc.gd" id="2_wyqdb"]
[ext_resource type="Script" path="res://Scripts/MoveCamera.gd" id="3_uarpx"]
[ext_resource type="Script" path="res://Scripts/CeilingLamp.gd" id="4_e8pf1"]
[ext_resource type="Script" path="res://Scripts/Main_UI.gd" id="4_r6018"]
[ext_resource type="Script" path="res://Scripts/Minimap.gd" id="5_46gsp"]
[ext_resource type="Texture2D" uid="uid://bk8hhsog7dkcc" path="res://Images/Minimap_-1.png" id="6_dwbcj"]
[ext_resource type="Texture2D" uid="uid://daye3cmnpjtk5" path="res://Images/Minimap_Link.png" id="7_dyk8s"]
[ext_resource type="Texture2D" uid="uid://8nunteq2qx5l" path="res://Images/Minimap_LocPin.png" id="8_2u8ox"]
[ext_resource type="Script" path="res://Scripts/GenerateLayout.gd" id="9_lp2y1"]
[ext_resource type="Texture2D" uid="uid://c4dfyqbwduxy2" path="res://Images/Arrow_Up.png" id="10_1135l"]
[ext_resource type="Texture2D" uid="uid://nf2445wpq3sa" path="res://Images/Arrow_Down.png" id="11_11xn2"]
[ext_resource type="Texture2D" uid="uid://cmxjpxlmtsnww" path="res://Images/Arrow_Left.png" id="12_qnapl"]
[ext_resource type="Texture2D" uid="uid://bgtcigo57xvxp" path="res://Images/Arrow_Right.png" id="13_3cp87"]
[ext_resource type="Script" path="res://Scripts/EnigmeAPI.gd" id="14_gevu2"]
[ext_resource type="Texture2D" uid="uid://w6o2yy362njl" path="res://Images/AnswersWait.png" id="15_g0scu"]
[ext_resource type="Texture2D" uid="uid://rw2qmhgk22fq" path="res://Images/DoomBar_BG.png" id="15_q1rdq"]
[ext_resource type="Texture2D" uid="uid://hd0j1ejag80" path="res://Images/DoomBar_Progress.png" id="16_e7q76"]
[ext_resource type="Script" path="res://Scripts/Inventaire.gd" id="16_g20te"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8pi23"]
albedo_color = Color(1, 0, 1, 1)
metallic = 1.0
metallic_specular = 0.51
normal_scale = -0.88

[sub_resource type="Environment" id="Environment_hfxq2"]
ambient_light_source = 1
ambient_light_energy = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qh7d1"]
albedo_color = Color(1, 1, 0, 1)
metallic = 1.0

[sub_resource type="PlaneMesh" id="PlaneMesh_ib5b8"]
material = SubResource("StandardMaterial3D_qh7d1")
size = Vector2(3, 3)

[sub_resource type="PlaneMesh" id="PlaneMesh_xmpls"]

[sub_resource type="PlaneMesh" id="PlaneMesh_lj7do"]

[sub_resource type="PlaneMesh" id="PlaneMesh_bbfoe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2pknw"]
bg_color = Color(0.287355, 0.30964, 0.572018, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.433234, 0.553353, 0.828621, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_047c6"]
bg_color = Color(0.564134, 0.21686, 2.40654e-07, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6972, 0.534339, 0.104158, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ikts"]
bg_color = Color(0.287355, 0.30964, 0.572018, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.433234, 0.553353, 0.828621, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oeb6j"]
bg_color = Color(0.215544, 0.0223041, 3.60981e-08, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.539248, 0.311779, 0.0268346, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pyvoc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jefi0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_f837t"]
Button/font_sizes/font_size = 24
Button/styles/hover = SubResource("StyleBoxFlat_2pknw")
Button/styles/normal = SubResource("StyleBoxFlat_047c6")
Button/styles/pressed = SubResource("StyleBoxFlat_3ikts")
Panel/styles/panel = SubResource("StyleBoxFlat_oeb6j")
TextEdit/colors/background_color = Color(0, 0, 0, 0)
TextEdit/colors/current_line_color = Color(0.25098, 0.25098, 0.258824, 0)
TextEdit/colors/font_color = Color(1, 1, 1, 1)
TextEdit/font_sizes/font_size = 20
TextEdit/styles/normal = SubResource("StyleBoxFlat_pyvoc")
TextEdit/styles/read_only = SubResource("StyleBoxFlat_jefi0")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0qi1b"]
bg_color = Color(0.833578, 0.5928, 0.253674, 1)
border_color = Color(0.833578, 0.5928, 0.253674, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g7lgm"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_foyba"]
Button/styles/hover = SubResource("StyleBoxFlat_0qi1b")
Button/styles/normal = SubResource("StyleBoxFlat_g7lgm")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32g0a"]
bg_color = Color(1, 1, 1, 1)
border_width_bottom = 10
border_color = Color(0.588235, 0.588235, 0.588235, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.392157, 0.392157, 0.392157, 0.6)
shadow_size = 15
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w1cn7"]
bg_color = Color(0.542536, 0.495757, 0.197613, 1)
border_width_bottom = 10
border_color = Color(0.327451, 0.297541, 0.111216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.352867, 0.308167, 0.0382994, 0.6)
shadow_size = 15
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smatl"]
bg_color = Color(0.686275, 0.686275, 0.686275, 1)
border_width_bottom = 10
border_color = Color(0.490196, 0.490196, 0.490196, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.294118, 0.294118, 0.294118, 0.6)
shadow_size = 15
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aklvf"]
bg_color = Color(0.679041, 0.241128, 0.866578, 1)
border_width_bottom = 10
border_color = Color(0.424719, 0.0876797, 0.569584, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.442056, 0.0292621, 0.51323, 0.6)
shadow_size = 15
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jgp3j"]
bg_color = Color(0.552956, 0.552956, 0.552955, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2484, 0.2484, 0.2484, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a1mdd"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.686086, 0.569138, 0.550589, 1)
border_width_bottom = 15
border_color = Color(0.545122, 0.433172, 0.403027, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6wgqm"]

[sub_resource type="Theme" id="Theme_ovgxn"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/font_sizes/font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_32g0a")
Button/styles/focus = SubResource("StyleBoxFlat_32g0a")
Button/styles/hover = SubResource("StyleBoxFlat_w1cn7")
Button/styles/normal = SubResource("StyleBoxFlat_smatl")
Button/styles/pressed = SubResource("StyleBoxFlat_aklvf")
LineEdit/font_sizes/font_size = 24
LineEdit/styles/normal = SubResource("StyleBoxFlat_jgp3j")
Panel/styles/panel = SubResource("StyleBoxFlat_a1mdd")
TextEdit/colors/font_color = Color(0, 0, 0, 1)
TextEdit/font_sizes/font_size = 30
TextEdit/styles/normal = SubResource("StyleBoxEmpty_6wgqm")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eamqd"]
bg_color = Color(0.316027, 0.188637, 0.16221, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.140616, 0.0657825, 0.0445285, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_01d2i"]
bg_color = Color(0.529198, 0.335933, 0.295635, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.357073, 0.201099, 0.156782, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5efp"]
bg_color = Color(0.632185, 0.399073, 0.104716, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.53374, 0.31631, 0.25447, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ew74c"]
bg_color = Color(0.601339, 0.620216, 0.417792, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.333668, 0.414041, 0.229832, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80ksb"]

[sub_resource type="Theme" id="Theme_nbw0t"]
Button/styles/disabled = SubResource("StyleBoxFlat_eamqd")
Button/styles/hover = SubResource("StyleBoxFlat_01d2i")
Button/styles/normal = SubResource("StyleBoxFlat_s5efp")
Button/styles/pressed = SubResource("StyleBoxFlat_ew74c")
LineEdit/styles/normal = SubResource("StyleBoxFlat_80ksb")

[node name="Node3D" type="Node3D"]
script = ExtResource("1_je4ns")

[node name="LeTorus" type="CSGTorus3D" parent="."]
transform = Transform3D(-1.31134e-07, -3, 0, 3, -1.31134e-07, 0, 0, 0, 3, 5, 1, 0)
sides = 15
ring_sides = 9
material = SubResource("StandardMaterial3D_8pi23")
script = ExtResource("2_wyqdb")

[node name="_Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 2, 0)
environment = SubResource("Environment_hfxq2")
fov = 70.0
near = 0.5
script = ExtResource("3_uarpx")

[node name="OmniLight3D" type="OmniLight3D" parent="_Camera3D"]
light_energy = 2.0
light_indirect_energy = 5.0
light_volumetric_fog_energy = 5.0
distance_fade_enabled = true
distance_fade_begin = 10.0
distance_fade_length = 50.0
omni_range = 12.0
omni_attenuation = 2.0

[node name="Plafond" type="MeshInstance3D" parent="."]
transform = Transform3D(-10, 2.26494e-06, 0, -1.50996e-06, -15, 0, 0, 0, 10, 0, 12, 0)
mesh = SubResource("PlaneMesh_ib5b8")

[node name="Mur1" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.55671e-07, -3, 0, -6.55671e-07, 5.73206e-15, -7.5, 15, -1.31134e-07, -3.27835e-07, 15, 4.5, 0)
mesh = SubResource("PlaneMesh_xmpls")
skeleton = NodePath("../Sol")

[node name="Mur2" type="MeshInstance3D" parent="."]
transform = Transform3D(-15, 2.62268e-07, 3.27835e-07, -6.55671e-07, 5.73206e-15, -7.5, -1.31134e-06, -3, 1.43301e-14, 0, 4.5, 15)
mesh = SubResource("PlaneMesh_lj7do")
skeleton = NodePath("../Sol")

[node name="Mur3" type="MeshInstance3D" parent="."]
transform = Transform3D(1.96701e-06, 3, -2.86603e-14, -6.55671e-07, 5.73206e-15, -7.5, -15, 3.93402e-07, 3.27835e-07, -15, 4.5, 0)
mesh = SubResource("PlaneMesh_lj7do")
skeleton = NodePath("../Sol")

[node name="Mur4" type="MeshInstance3D" parent="."]
transform = Transform3D(15, 0, -3.27835e-07, -6.55671e-07, 5.73206e-15, -7.5, 0, 3, 1.43301e-14, 0, 4.5, -15)
mesh = SubResource("PlaneMesh_bbfoe")
skeleton = NodePath("../Sol")

[node name="Sol" type="MeshInstance3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, -2, 0)
mesh = SubResource("PlaneMesh_ib5b8")

[node name="Lampe" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0)
light_energy = 10.0
omni_range = 30.0
omni_attenuation = 1.5
script = ExtResource("4_e8pf1")

[node name="MainUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_f837t")
script = ExtResource("4_r6018")

[node name="MapButton" type="Button" parent="MainUI"]
layout_mode = 0
offset_left = 944.0
offset_top = 570.0
offset_right = 1122.0
offset_bottom = 618.0
text = "MAP"

[node name="MinimapPreview" type="Panel" parent="MainUI"]
layout_mode = 0
offset_left = 946.0
offset_top = 384.0
offset_right = 1120.0
offset_bottom = 552.0

[node name="Minimap" type="Control" parent="MainUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 1132.0
offset_bottom = 624.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_f837t")
script = ExtResource("5_46gsp")

[node name="BG" type="Panel" parent="MainUI/Minimap"]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 648.0

[node name="Return" type="Button" parent="MainUI/Minimap"]
layout_mode = 0
offset_left = 944.0
offset_top = 570.0
offset_right = 1122.0
offset_bottom = 618.0
text = "Retour
"

[node name="RoomTile" type="Sprite2D" parent="MainUI/Minimap"]
texture_filter = 1
position = Vector2(575, 525)
scale = Vector2(3, 3)
texture = ExtResource("6_dwbcj")

[node name="LinkTile" type="Sprite2D" parent="MainUI/Minimap"]
texture_filter = 1
position = Vector2(575, 525)
texture = ExtResource("7_dyk8s")

[node name="LocPin" type="Sprite2D" parent="MainUI/Minimap"]
z_index = 1
texture_filter = 1
position = Vector2(575, 525)
scale = Vector2(3, 3)
texture = ExtResource("8_2u8ox")

[node name="RoomList" type="Node" parent="MainUI/Minimap"]
script = ExtResource("9_lp2y1")

[node name="ChangeRoom" type="Control" parent="MainUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -14.0
offset_right = 865.0
offset_bottom = 630.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_foyba")

[node name="UpArrow" type="Button" parent="MainUI/ChangeRoom"]
texture_filter = 1
layout_mode = 0
offset_left = 88.0
offset_top = 404.0
offset_right = 166.0
offset_bottom = 480.0
icon = ExtResource("10_1135l")
icon_alignment = 1
expand_icon = true

[node name="DownArrow" type="Button" parent="MainUI/ChangeRoom"]
texture_filter = 1
layout_mode = 0
offset_left = 87.0
offset_top = 555.0
offset_right = 165.0
offset_bottom = 631.0
icon = ExtResource("11_11xn2")
icon_alignment = 1
expand_icon = true

[node name="LeftArrow" type="Button" parent="MainUI/ChangeRoom"]
texture_filter = 1
layout_mode = 0
offset_left = 13.0
offset_top = 480.0
offset_right = 91.0
offset_bottom = 556.0
icon = ExtResource("12_qnapl")
icon_alignment = 1
expand_icon = true

[node name="RightArrow" type="Button" parent="MainUI/ChangeRoom"]
texture_filter = 1
layout_mode = 0
offset_left = 162.0
offset_top = 479.0
offset_right = 240.0
offset_bottom = 555.0
icon = ExtResource("13_3cp87")
icon_alignment = 1
expand_icon = true

[node name="DoomBar" type="TextureProgressBar" parent="MainUI"]
texture_filter = 1
layout_mode = 0
offset_left = 350.0
offset_top = 20.0
offset_right = 550.0
offset_bottom = 40.0
scale = Vector2(2, 2)
texture_under = ExtResource("15_q1rdq")
texture_progress = ExtResource("16_e7q76")

[node name="DoomBarValue" type="TextEdit" parent="MainUI"]
visibility_layer = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 505.0
offset_right = 555.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
editable = false

[node name="QCM_Menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_ovgxn")

[node name="A" type="Button" parent="QCM_Menu"]
layout_mode = 0
offset_left = 61.0
offset_top = 315.0
offset_right = 536.0
offset_bottom = 433.0
text = "Réponse A"
text_overrun_behavior = 2
autowrap_mode = 2

[node name="B" type="Button" parent="QCM_Menu"]
layout_mode = 0
offset_left = 615.0
offset_top = 316.0
offset_right = 1090.0
offset_bottom = 434.0
text = "Réponse B"
text_overrun_behavior = 2
autowrap_mode = 2

[node name="C" type="Button" parent="QCM_Menu"]
layout_mode = 0
offset_left = 61.0
offset_top = 453.0
offset_right = 536.0
offset_bottom = 571.0
text = "Réponse C"
text_overrun_behavior = 2
autowrap_mode = 2

[node name="D" type="Button" parent="QCM_Menu"]
layout_mode = 0
offset_left = 615.0
offset_top = 454.0
offset_right = 1090.0
offset_bottom = 572.0
text = "Réponse D"
text_overrun_behavior = 2
autowrap_mode = 2

[node name="QuestionPanel" type="Panel" parent="QCM_Menu"]
layout_mode = 0
offset_left = 27.0
offset_top = 17.0
offset_right = 1128.0
offset_bottom = 294.0

[node name="TextEdit" type="TextEdit" parent="QCM_Menu/QuestionPanel"]
light_mask = 0
layout_mode = 0
offset_left = 15.0
offset_top = 12.0
offset_right = 1085.0
offset_bottom = 262.0
text = "Ceci sera la question !"
editable = false
wrap_mode = 1

[node name="Enigme_Menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_ovgxn")
script = ExtResource("14_gevu2")

[node name="QuestionPanel" type="Panel" parent="Enigme_Menu"]
layout_mode = 0
offset_left = 27.0
offset_top = 17.0
offset_right = 1128.0
offset_bottom = 294.0

[node name="TextEdit" type="TextEdit" parent="Enigme_Menu/QuestionPanel"]
light_mask = 0
layout_mode = 0
offset_left = 15.0
offset_top = 12.0
offset_right = 1085.0
offset_bottom = 262.0
text = "Ceci sera la question !"
editable = false
wrap_mode = 1

[node name="Reponse" type="LineEdit" parent="Enigme_Menu"]
layout_mode = 0
offset_left = 150.0
offset_top = 400.0
offset_right = 650.0
offset_bottom = 500.0
placeholder_text = "Réponse"

[node name="AnswerFeedback" type="Sprite2D" parent="Enigme_Menu"]
texture_filter = 1
position = Vector2(925, 450)
scale = Vector2(3, 3)
texture = ExtResource("15_g0scu")

[node name="HTTPRequest" type="HTTPRequest" parent="Enigme_Menu"]

[node name="Inventaire" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_nbw0t")
script = ExtResource("16_g20te")

[node name="Obj_1" type="Button" parent="Inventaire"]
layout_mode = 0
offset_left = 200.0
offset_top = 40.0
offset_right = 375.0
offset_bottom = 215.0
text = "Objet 1"

[node name="LE_1" type="LineEdit" parent="Inventaire/Obj_1"]
layout_mode = 0
offset_left = 50.0
offset_top = 125.0
offset_right = 125.0
offset_bottom = 160.0
placeholder_text = "quantité"
alignment = 1
editable = false

[node name="Obj_2" type="Button" parent="Inventaire"]
layout_mode = 0
offset_left = 400.0
offset_top = 40.0
offset_right = 575.0
offset_bottom = 215.0
text = "Objet 2"

[node name="LE_2" type="LineEdit" parent="Inventaire/Obj_2"]
layout_mode = 0
offset_left = 50.0
offset_top = 125.0
offset_right = 125.0
offset_bottom = 160.0
placeholder_text = "quantité"
alignment = 1
editable = false

[node name="Obj_3" type="Button" parent="Inventaire"]
layout_mode = 0
offset_left = 600.0
offset_top = 40.0
offset_right = 775.0
offset_bottom = 215.0
text = "Objet 3"

[node name="LE_3" type="LineEdit" parent="Inventaire/Obj_3"]
layout_mode = 0
offset_left = 50.0
offset_top = 125.0
offset_right = 125.0
offset_bottom = 160.0
placeholder_text = "quantité"
alignment = 1
editable = false

[node name="Obj_4" type="Button" parent="Inventaire"]
layout_mode = 0
offset_left = 200.0
offset_top = 240.0
offset_right = 375.0
offset_bottom = 415.0
text = "Objet 4"

[node name="LE_4" type="LineEdit" parent="Inventaire/Obj_4"]
layout_mode = 0
offset_left = 50.0
offset_top = 125.0
offset_right = 125.0
offset_bottom = 160.0
placeholder_text = "quantité"
alignment = 1
editable = false

[node name="Obj_5" type="Button" parent="Inventaire"]
layout_mode = 0
offset_left = 400.0
offset_top = 240.0
offset_right = 575.0
offset_bottom = 415.0
text = "Objet 5"

[node name="LE_5" type="LineEdit" parent="Inventaire/Obj_5"]
layout_mode = 0
offset_left = 50.0
offset_top = 125.0
offset_right = 125.0
offset_bottom = 160.0
placeholder_text = "quantité"
alignment = 1
editable = false

[node name="Obj_6" type="Button" parent="Inventaire"]
layout_mode = 0
offset_left = 600.0
offset_top = 240.0
offset_right = 775.0
offset_bottom = 415.0
text = "Objet 6"

[node name="LE_6" type="LineEdit" parent="Inventaire/Obj_6"]
layout_mode = 0
offset_left = 50.0
offset_top = 125.0
offset_right = 125.0
offset_bottom = 160.0
placeholder_text = "quantité"
alignment = 1
editable = false

[node name="Obj_7" type="Button" parent="Inventaire"]
layout_mode = 0
offset_left = 200.0
offset_top = 440.0
offset_right = 375.0
offset_bottom = 615.0
text = "Objet 7"

[node name="LE_7" type="LineEdit" parent="Inventaire/Obj_7"]
layout_mode = 0
offset_left = 50.0
offset_top = 125.0
offset_right = 125.0
offset_bottom = 160.0
placeholder_text = "quantité"
alignment = 1
editable = false

[node name="Obj_8" type="Button" parent="Inventaire"]
layout_mode = 0
offset_left = 400.0
offset_top = 440.0
offset_right = 575.0
offset_bottom = 615.0
text = "Objet 8"

[node name="LE_8" type="LineEdit" parent="Inventaire/Obj_8"]
layout_mode = 0
offset_left = 50.0
offset_top = 125.0
offset_right = 125.0
offset_bottom = 160.0
placeholder_text = "quantité"
alignment = 1
editable = false

[node name="Obj_9" type="Button" parent="Inventaire"]
layout_mode = 0
offset_left = 600.0
offset_top = 440.0
offset_right = 775.0
offset_bottom = 615.0
text = "Objet 9"

[node name="LE_9" type="LineEdit" parent="Inventaire/Obj_9"]
layout_mode = 0
offset_left = 50.0
offset_top = 125.0
offset_right = 125.0
offset_bottom = 160.0
placeholder_text = "quantité"
alignment = 1
editable = false

[node name="Obj_None" type="Button" parent="Inventaire"]
layout_mode = 0
offset_left = 850.0
offset_top = 300.0
offset_right = 1050.0
offset_bottom = 360.0
text = "Pas d'objet"

[connection signal="change_room" from="MainUI" to="." method="_on_main_ui_change_room"]
[connection signal="change_room" from="MainUI" to="Lampe" method="_on_main_ui_change_room"]
[connection signal="text_submitted" from="Enigme_Menu/Reponse" to="Enigme_Menu" method="_on_reponse_text_submitted"]
[connection signal="objDone" from="Inventaire" to="." method="_on_inventaire_obj_done"]
